# pydojoctl

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
command/: base.py  eventos.py  participantes.py
models/: dojo.py
pydojoctl/: __main__.py
pydojoctl/command/: base.py  eventos.py
pydojoctl/models/: dojo.py
pydojoctl/service/: database.py
pydojoctl/views/: header.py  layout.py  menu.py  timer.py
service/: database.py
src/: main.py
src/views/: atuacao.py  layout.py
tests/: conftest.py  test_database.py  test_eventos.py
views/: atuacao.py  header.py  layout.py  menu.py  timer.py
