[tool.poetry]
name = "pydojoctl"
version = "0.1.0"
description = "Coding Dojo Control"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^11.2.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^7.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
